--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.10'
     id 'application'
     id 'java-library'
+    id 'maven'
 }
 
-group = 'me.ivan'
-version = '1.0-SNAPSHOT'
+group = 'ru.stech'
+version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -16,8 +17,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.4.2'
     implementation 'io.netty:netty-all:4.1.60.Final'
     implementation 'javax.sip:jain-sip-ri:1.3.0-91'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
 
 test {
@@ -32,6 +31,36 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = '11'
 }
 
-application {
-    mainClassName = 'MainKt'
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+install {
+    repositories.mavenInstaller {
+        pom.project {
+            licenses {
+                license {
+                    name 'MIT'
+                    url 'https://opensource.org/licenses/MIT'
+                    distribution 'repo'
+                }
+            }
+        }
+    }
+}
+
+wrapper {
+    gradleVersion = "6.6.1"
+    distributionType = Wrapper.DistributionType.ALL
 }
