--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.4.2'
+    implementation 'io.github.microutils:kotlin-logging-jvm:2.0.6'
     implementation 'io.netty:netty-all:4.1.60.Final'
     implementation 'javax.sip:jain-sip-ri:1.3.0-91'
 }
