--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.4.2'
     implementation 'io.netty:netty-all:4.1.60.Final'
     implementation 'javax.sip:jain-sip-ri:1.3.0-91'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
 }
 
 test {
